fix: page width overflow on small screens

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -59,7 +59,7 @@ body {
 }
 
 article {
-  width: var(--page-width);
+  max-width: var(--page-width);
   margin: 0 auto
 }
 
